<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="EventTitleTest">Event Title Here</string>
    <string name="ret_cloud">Retrieve from Cloud</string>
    <string name="force_cloud">Force Cloud Sync</string>
    <string name="app_name">Planner Plus</string>
    <string name="action_settings">Settings</string>
    <string name="action_remove">Remove</string>
    <string name="action_edit">Edit Selection</string>
    <string name="tb_add">+ Event</string>
    <string name="tb_date">Jan 1, 2013</string>
    <string name="tb_month">Month</string>
    <string name="test_desc">This is a really long description to test the capacity of the EvenView XML layout for padding issues, wrapping issues or any other layout problems.</string>
    <string name="tb_aev">Create an Event</string>
    <string name="tb_atd">Add to ToDo List</string>
    <string name="title_activity_add_activity">Create an Event</string>
    <string name="ce_name">Name of Event:</string>
    <string name="ce_desc">Event Description:</string>
    <string name="event_hint">Beach Party</string>
    <string name="desc_hint">Going to have a BBQ</string>
    <string name="ce_stime">Event Starts at:</string>
    <string name="ce_etime">Event Ends at:</string>
    <string name="ce_doe">Date of Event:</string>
    <string name="ce_alarm">Notification</string>
    <string name="ce_e_ala">Notification Enabled</string>
    <string name="ce_d_ala">Notification Disabled</string>
    <string name="ce_alatv">Event Notification: </string>
    <string name="ce_create">Create Event</string>
    <string name="tb_aqe">Quick Event</string>
    <string name="td_name">Name of ToDo Activity:</string>
    <string name="td_button">Create ToDo</string>
    <string name="td_time">Time of Event/Time Due:</string>
    <string name="td_date">Date of ToDo:</string>
    <string name="tb_aqt">Quick ToDo</string>
    <string name="title_activity_weekly_activity">Week</string>
    <string name="title_activity_todo_activity">Create a ToDo</string>
    <string name="title_activity_month_activity">Month View</string>
    <string name="Color_Text">Select a color for the Event</string>
    <string name="td_Color_Text">Select a color for your ToDo</string>
    <string name="clear_all">Delete Everything</string>
    <string name="test_item">Create Alarm</string>
    <string name="tb_rep">Class Planner</string>
    <string name="edt_ev">Apply Edits</string>
    <string name="rp_sun">SU</string>
    <string name="rp_mon">M</string>
    <string name="rp_tue">T</string>
    <string name="rp_wed">W</string>
    <string name="rp_thu">TH</string>
    <string name="rp_fri">F</string>
    <string name="rp_sat">SA</string>
    <string name="rp_rep">Repeated Days:</string>
    <string name="tb_week">Weekly Agenda</string>
    <string name="tb_day">Daily Agenda</string>
</resources>
