<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- You must fill in the menu items here. -->
    <item android:id="@+id/tb_month" android:showAsAction="always" android:title="@string/tb_month"></item>
    <item android:id="@+id/tb_date" android:showAsAction="always" android:title="@string/tb_date"/>
    
    <item android:id="@+id/tb_add"  android:showAsAction="always" android:title="@string/tb_add">
		<!--  Sub Menu for Adding Events and ToDos -->
		<menu>
	    <item android:id="@+id/tb_sub_ev" android:showAsAction="always" android:title="@string/tb_aev"/>
	    <item android:id="@+id/tb_sub_td" android:showAsAction="always" android:title="@string/tb_atd"/>
	    <item android:id="@+id/tb_sub_qe" android:showAsAction="always" android:title="@string/tb_aqe"/>
	    </menu>    
    </item>
</menu>