<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="match_parent">
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <TextView
	        android:id="@+id/td_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="15sp"
	        android:text="@string/td_name"
	        android:textSize="20sp" />

	    <EditText
	        android:id="@+id/et_tdname"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/event_hint"
	        android:imeOptions="actionDone"
	        android:singleLine="true" />

	    <TextView
	        android:id="@+id/td_sttv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:paddingTop="20sp"
	        android:text="@string/td_time"
	        android:textSize="20sp" />

	    <TimePicker
	        android:id="@+id/td_end"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:padding="30sp" />

	    <TextView
	        android:id="@+id/td_doe"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/td_date"
	        android:textSize="20sp" />

	    <DatePicker
	        android:id="@+id/date_td"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:padding="30sp"
	        android:calendarViewShown="false" />

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="horizontal"
	        android:padding="30sp" >

	        <TextView
	            android:id="@+id/td_alatv"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingRight="30sp"
	            android:text="@string/ce_alatv"
	            android:textSize="15sp" />

	        <ToggleButton
	            android:id="@+id/td_alarm"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/ce_alarm"
	            android:textOff="@string/ce_d_ala"
	            android:textOn="@string/ce_e_ala" />
	    </LinearLayout>
	    
	    <!-- Add Color Selection Code -->

	    <Button
	        android:id="@+id/td_create"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/td_button" />
	    
	</LinearLayout>
</ScrollView>
