<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="horizontal">
        
<!--     android:layout_gravity="center" -->

   <TextView
       android:paddingLeft="10sp"
       android:id="@+id/tb_month"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/tb_month"
       android:textColor="#000000" />

   <TextView
       android:id="@+id/tb_date"
       android:gravity="center"
       android:layout_width="0dip"
       android:layout_height="wrap_content"
       android:layout_weight="1"
       android:padding="5sp"
       android:text="@string/tb_date"
       android:textColor="#000000" 
       android:textSize="20sp"
       android:textStyle="bold"/>

   <TextView
       android:paddingRight="10sp"
       android:id="@+id/tb_add"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/tb_add"
       android:textColor="#000000" />
   
</LinearLayout>
